--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,20 @@
     "*.wxss": "css",
     "*.wxs": "javascript",
     "*.html": "html",
+    "*.san": "san",
+    "*.har": "json",
+    "*.df": "dockerfile",
     "strings.h": "c",
     "string.h": "c",
     "stddef.h": "c",
     "wchar.h": "c",
     "assertmacros.h": "c",
     "assert.h": "c",
-    "cdefs.h": "c"
+    "cdefs.h": "c",
+    "stdlib.h": "c",
+    "stdio.h": "c",
+    "unistd.h": "c"
   },
   "terminal.integrated.fontSize": 15,
-  "window.zoomLevel": null
+  "window.zoomLevel": 0
 }
