add(lpip): 关于时间时区相关API的Demo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
     "cdefs.h": "c",
     "stdlib.h": "c",
     "stdio.h": "c",
-    "unistd.h": "c"
+    "unistd.h": "c",
+    "time.h": "c"
   },
   "terminal.integrated.fontSize": 15,
   "window.zoomLevel": 0
