--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,13 @@
       "label": "build current file",
       "type": "shell",
       "command": "clang",
-      "args": ["-g", "${file}"],
+      "args": [
+        "-Ivendors/",
+        "-g",
+        "-o",
+        "bin/${fileBasenameNoExtension}",
+        "${file}"
+      ],
       "group": {
         "kind": "build",
         "isDefault": true
