add(lpip): 增加系统调用 uname 示例

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,8 @@
     "stdlib.h": "c",
     "stdio.h": "c",
     "unistd.h": "c",
-    "time.h": "c"
+    "time.h": "c",
+    "utsname.h": "c"
   },
   "terminal.integrated.fontSize": 15,
   "window.zoomLevel": 0
