add(lpip): 更新时区地区备注

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,9 @@
     "stdio.h": "c",
     "unistd.h": "c",
     "time.h": "c",
-    "utsname.h": "c"
+    "utsname.h": "c",
+    "limits.h": "c",
+    "syslimits.h": "c"
   },
   "terminal.integrated.fontSize": 15,
   "window.zoomLevel": 0
