add(codetalks): 简单封装一下 sys/inotify 相关常量的使用

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
     "time.h": "c",
     "utsname.h": "c",
     "limits.h": "c",
-    "syslimits.h": "c"
+    "syslimits.h": "c",
+    "inotify.h": "c"
   },
   "terminal.integrated.fontSize": 15,
   "window.zoomLevel": 0
